force-app/main/default/objects/RenewAI_Energy_Asset__c/RenewAI_Energy_Asset__c.object-meta.xml
<CustomObject>
    <description>Represents physical assets (Solar, Wind, Battery, Demand, Grid).</description>
    <label>Energy Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Energy Asset</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>