force-app/main/default/objects/RenewAI_Energy_Asset__c/fields/Asset_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Code__c</fullName>
    <externalId>true</externalId>
    <label>Asset Code</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>