force-app/main/default/objects/RenewAI_Energy_Asset__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Wind</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Industrial Demand</fullName>
            </value>
            <value>
                <fullName>Grid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>