force-app/main/default/objects/RenewAI_Energy_Asset__c/fields/Capacity_MW__c.field-meta.xml
<CustomField>
    <fullName>Capacity_MW__c</fullName>
    <label>Capacity MW</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>