force-app/main/default/objects/RenewAI_Energy_Asset__c/validationRules/Capacity_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Capacity_MW__c &lt;= 0</errorConditionFormula>
    <errorMessage>Capacity must be greater than zero MW.</errorMessage>
</ValidationRule>